--- a/README
+++ b/README
@@ -5,10 +5,8 @@ Terminal:
 
 Clean Your logbook in Things.app     #after that Your Iphone Sync gonna be faster.
 
-Now You can research logbook_backup.html file in Spotlight. Just like it was still in Your Things.app, but bigger, faster, stronger ;]
+Now You can research logbook_backup_DATE.html file in Spotlight. Just like it was still in Your Things.app, but bigger, faster, stronger ;]
+
+Please send some feedback, issues, suggestions, etc.
 
 _\\// Live long and prosper.
-
-NOTE: script overrides previous file. This bug gonna be fixed in future.
-
-Please send some feedback, issues, etc.
